Fix ui on mobile devices

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,7 +26,11 @@ input {
   border: none;
   background-color: transparent;
   font-size: 2.5rem;
-  margin-right: 1.5rem;
+  margin: 0 0 1.5rem 0;
+
+  @media screen and (min-width: 800px) {
+    margin: 0 1.5rem 0 0;
+  }
 }
 
 input::placeholder {
@@ -38,7 +42,12 @@ input::placeholder {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  margin-top: 8rem;
+
+  @media screen and (min-width: 800px) {
+    justify-content: center;
+    margin-top: initial;
+  }
 }
 
 #center {
@@ -50,18 +59,17 @@ input::placeholder {
 form {
   display: flex;
   flex-direction: column;
-  margin: 2rem 0;
+  margin: 2rem 1.5rem;
   justify-content: center;
-}
 
-@media screen and (min-width: 800px) {
-  form {
+  @media screen and (min-width: 800px) {
+    margin: 2rem 0;
     flex-direction: row;
   }
 }
 
 button {
-  width: 120px;
+  width: 100%;
   height: 50px;
   background-color: transparent;
   border: none;
@@ -69,4 +77,8 @@ button {
   color: #fff;
   font-size: 1.3rem;
   align-self: flex-end;
+
+  @media screen and (min-width: 800px) {
+    width: 120px;
+  }
 }
